# selectie-evaluatietool

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.R  app.py  cho_transform.py  config_FAR_Leiden_2025.xlsx  config_FAR_Leiden_2026.xlsx  config_Psychologie_2021_2022.xlsx  config_Psychologie_2022_2023.xlsx  config_Psychologie_2026_2027.xlsx  config_template.xlsx  config_wizard.py  pyproject.toml  rapport.py  shared.py  transformatie.py
R/: koppel_en_classificeer.R  maak_1cho_data.R  maak_selectiedata.R
assets/: style.css
data/demo/: config.xlsx  selectiedata.xlsx
data/demo/bewegingswetenschappen_vu_2026/: 1cho_data.csv  config.xlsx
data/demo/biomed_aumc_2026/: 1cho_data.csv
data/demo/far_leiden_2025/: 1cho_data.csv  config.xlsx
data/fictief/: 1cho_data_bewegingswetenschappen_2026.csv  1cho_data_biomed_2026.csv  config_BioMed_AUMC_2026.xlsx  selectiedata_bewegingswetenschappen_2026.xlsx  selectiedata_biomed_2026.xlsx
data/synthetic/: 1cho_data.csv  EV_DEMO_selectieopleiding.csv  analysedata.csv  gekoppeld.parquet  selectiedata_voorbeeld.csv  selectiescores_voorbeeld.csv  studiesucces_data.csv
docs/: data-handleiding.md  handleiding-data.md
scripts/: fix2_presentatie.py  fix3_presentatie.py  fix_presentatie.py  maak_data.py  maak_fictief_bewegingswetenschappen.py  maak_fictief_programma.py  maak_presentatie.py  maak_template.py  update_configs.py  update_presentatie.py
scripts/eenmalig/: maak_fictief_bewegingswetenschappen.py  maak_fictief_programma.py  maak_presentatie.py  update_configs.py  update_datawoordenboek.py
(+5 files in other folders)
