[project]
name = "evaluatietool-voorbeeld"
version = "0.1.0"
description = "Evaluatietool: selectiedata koppelen aan 1CHO voor studiesucces analyse"
requires-python = ">=3.11"

dependencies = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "pandas>=2.2.0",
    "pyarrow>=14.0.0",
    "numpy>=1.26.0",
    "plotly>=5.20.0",
    "scipy>=1.10.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
