[project]
name = "selectie-evaluatietool"
version = "0.1.0"
description = "Evaluatietool: selectiedata koppelen aan 1CHO voor studiesucces analyse"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"

dependencies = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.20.0",
    "statsmodels>=0.14.0",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
    "fpdf2>=2.8.7",
    "kaleido>=1.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
